--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             {
                 "main": "js/main.js",
                 "dependencies": {
-                    "jquery": "http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"
+                    "jquery-2.1.1": "http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"
                 }
             }
         </script>
