--- a/demo/index.html
+++ b/demo/index.html
@@ -19,6 +19,6 @@
     </head>
     <body>
         <p>Hello world! This is HTML5 Boilerplate.</p>
-        <script src="js/cachier.js"></script>
+        <script src="../dist/cachier.js"></script>
     </body>
 </html>
